[package]
name = "arraylib"
description = "Tools for working with arrays"
version = "0.3.0"
authors = ["Waffle <waffle.lapkin@gmail.com>"]
license = "MIT"
edition = "2018"

repository = "https://github.com/WaffleLapkin/arraylib/"
homepage = "https://github.com/WaffleLapkin/arraylib/"
documentation = "https://docs.rs/arraylib/"
readme = "README.md"

keywords = ["no_std", "array"]
categories = ["no-std", "rust-patterns"]

exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# none

[features]
alloc = []

# Currently used nightly features:
# - trusted_len (for implementing `TrustedLen` on array's `IterMove`)
# - `exact_size_is_empty` (for implementing `<{Chunks,IterMove} as ExactSizeIterator>::is_empty` more effective)
nightly = []

[[example]]
name = "array_stack"
required-features = ["nightly"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
